--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,7 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "npm: compile",
       "type": "npm",
       "script": "compile",
       "group": "build",
@@ -10,10 +11,10 @@
         "reveal": "silent",
         "clear": true
       },
-      "problemMatcher": ["$tsc"],
-      "label": "npm: compile"
+      "problemMatcher": ["$tsc"]
     },
     {
+      "label": "npm: watch",
       "type": "npm",
       "script": "watch",
       "group": {
@@ -26,11 +27,10 @@
         "reveal": "silent",
         "clear": true
       },
-      "problemMatcher": ["$tsc-watch"],
-      "label": "npm: watch"
+      "problemMatcher": ["$tsc-watch"]
     },
     {
-      "label": "Kill Server",
+      "label": "npm: kill-server",
       "type": "shell",
       "command": "taskkill",
       "args": ["/F", "/IM", "node.exe", "/T"],
