--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "vscode": "^1.75.0"
   },
   "dependencies": {
+    "@vscode/debugadapter": "^1.68.0",
+    "@vscode/debugprotocol": "^1.68.0",
     "vscode-languageclient": "^8.1.0"
   },
   "devDependencies": {
