--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,14 @@
   "dependencies": {
     "vscode-languageserver": "^8.1.0",
     "vscode-languageserver-textdocument": "^1.0.8"
+  },
+  "devDependencies": {
+    "mocha": "^10.4.0",
+    "@types/mocha": "^10.0.6",
+    "typescript": "^5.4.5"
+  },
+  "scripts": {
+    "test": "mocha test/**/*.spec.js",
+    "test:watch": "mocha test/**/*.spec.js --watch"
   }
 }
