--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
   "name": "holo-lsp-client",
   "description": "HoloLSP Client for KOTOR NWScript Language Server",
-  "author": "HoloLSP Team",
-  "license": "LGPL-3.0",
-  "version": "0.0.1",
+  "author": "th3w1zard1",
+  "license": "MIT",
+  "version": "1.0.0",
   "publisher": "holo-lsp",
   "repository": {
     "type": "git",
