--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "name": "holo-lsp-server",
   "description": "HoloLSP Server for KOTOR NWScript Language Server Protocol",
   "version": "1.0.0",
-  "author": "HoloLSP Team",
-  "license": "LGPL-3.0",
+  "author": "th3w1zard1",
+  "license": "MIT",
   "engines": {
     "node": "*"
   },
@@ -14,14 +14,5 @@
   "dependencies": {
     "vscode-languageserver": "^8.1.0",
     "vscode-languageserver-textdocument": "^1.0.8"
-  },
-  "devDependencies": {
-    "mocha": "^10.4.0",
-    "@types/mocha": "^10.0.6",
-    "typescript": "^5.4.5"
-  },
-  "scripts": {
-    "test": "mocha test/**/*.spec.js",
-    "test:watch": "mocha test/**/*.spec.js --watch"
   }
 }
