--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,21 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "ES2020",
-    "lib": ["ES2020"],
+    "target": "es2020",
+    "lib": ["es2020"],
+    "outDir": "out",
+    "rootDir": "src",
     "sourceMap": true,
+    "incremental": true,
     "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "client/src/**/*",
-    "server/src/**/*"
+    "src"
   ],
   "exclude": [
     "node_modules",
-    "out",
-    "**/*.test.ts",
-    "vendor"
+    ".vscode-test"
   ],
   "references": [
     { "path": "./client" },
