Enhance configuration options by adding `holoLSP.builtinScriptsDirectory` to `package.json` for improved script resolution. Update README.md with new configuration details and examples for non-VS Code editors. Modify .gitignore to include `vendor/DeNCS` and ensure proper handling of test files. Add example JSON-RPC stdin files for testing LSP interactions.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
           "default": 100,
           "description": "Controls the maximum number of problems produced by the server."
         },
+        "holoLSP.builtinScriptsDirectory": {
+          "scope": "resource",
+          "type": "string",
+          "description": "Directory path for builtin KOTOR scripts. Can be absolute path, relative path, or file:// URI. If not set, uses hololsp:// virtual scheme."
+        },
         "holoLSP.trace.server": {
           "scope": "window",
           "type": "string",
